jade/testData/highlighting/tabsAndSpaces2.jade
aaa
  bbb
 <error descr="Tabs and spaces both used"> </error><error descr="Tabs and spaces both used">	</error>ccc
